채널 수정(채널설명), 관리자임명, 채널삭제 추가

--- a/src/main/resources/templates/channelMain.th.xml
+++ b/src/main/resources/templates/channelMain.th.xml
@@ -10,6 +10,7 @@
         <attr sel=".title" th:href="@{'/'+${chanInfo.slug}}" th:data-channel="${chanInfo.channelName}+'채널'">
             <attr sel="span" th:title="${chanInfo.channelName}+' 채널'" th:text="${chanInfo.channelName}+' 채널'"/>
         </attr>
+        <attr sel="#channelSetting" sec:authorize="isAuthenticated()" th:if="${chanInfo.channelManagerDtos()[0].user().userId.equals(userInfo.userId)}" th:href="'/'+${chanInfo.slug}+'/setting'"/>
         <attr sel=".buttons">
             <attr sel=".subscribe-btn" th:href="@{'/'+${chanInfo.slug}+'/subscribe'}" th:data-chan="${chanInfo.channelName}" th:class="'btn btn-sm subscribe-btn' + (${subCheck} ? ' active' : '')"/>
         </attr>
