--- a/src/main/resources/templates/channelMain.html
+++ b/src/main/resources/templates/channelMain.html
@@ -79,7 +79,9 @@
                                 <a href="javascript:void(0)" class="info-btn" role="button">
                                     <ion-icon name="information-circle-outline"></ion-icon>
                                 </a>
-
+                                <a href="" class="btn" id="channelSetting">
+                                    <ion-icon name="settings-outline"></ion-icon>
+                                </a>
                                 <div class="buttons">
                                     <a href="/{slug}/subscribe"  class="btn btn-sm subscribe-btn">
                                         <span class="subscribe">
