--- a/src/main/resources/templates/header.html
+++ b/src/main/resources/templates/header.html
@@ -61,6 +61,7 @@
             <div th:text="${userInfo.point}+'ⓟ'"></div>
           </div>
           <div class="dropdown-divider"></div>
+          <a class="dropdown-item" href="/u/info">내 정보</a>
           <a class="dropdown-item" href="/createChannel">채널 만들기</a>
           <div class="dropdown-divider"></div>
           <a class="dropdown-item" href="/logout">로그아웃</a>
